# norminette-hook

./: .pre-commit-hooks.yaml  LICENSE  README.md  norminette_hook.py  pyproject.toml
